--- a/styles.css
+++ b/styles.css
@@ -146,13 +146,83 @@ a:hover {
     margin: 0;
   }
 
-  #video {
+  #watch {
     margin-top: 0px;
     display: flex;
     justify-content: center;  
   }
 
-  #video > iframe {
+  #watch > iframe {
     max-width: 520px;
     width: 100%;
   }
+
+#pricing {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+  
+.prices {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: calc(100% / 3);
+  margin: 10px;
+  border: 1px solid black;
+  border-radius: 3px;
+  margin-bottom: 5px;
+  padding-bottom: 5px;
+}
+
+.prices > h2 {
+  font-size: 20px;
+  margin: 5px auto 0 auto;
+}
+
+.prices > ol {
+  margin: 15px 0;
+}
+
+.level {
+  background-color:#ddd;
+  padding: 5px 0;
+  margin-bottom: 5px;
+  text-transform: uppercase;
+  font-weight: 700;
+  width: 100%;
+}
+
+.btn {
+  background-color: orange;
+  padding: 5 15px;
+  text-align: center;
+  text-transform: uppercase;
+  width: 50%;
+  height: 25%;
+  border: 1px solid grey;
+  font-weight: 700;
+  color: black;
+  cursor: pointer;
+}
+
+.btn2 {
+  background-color: orange;
+  padding: 0 15px;
+  text-align: center;
+  text-transform: uppercase;
+  width: 100%;
+  height: 25px;
+  border: 0;
+  font-weight: 700;
+  color: black;  
+  cursor: pointer;
+}
+
+@media (max-height: 800px) {
+  h2 {
+    font-size:15px;
+    }
+}
